--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="head">#FFFFFF</color>
     <color name="main">#006135</color>
+    <color name="gris">#C3C3C3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
