--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
         android:hint="Correo electronico"
         android:layout_margin="25dp"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:background="@drawable/et_esquinas_redondeadas"
         android:inputType="textEmailAddress"
         android:layout_below="@+id/hola_fimeno"/>
@@ -47,6 +48,7 @@
         android:hint="Contraseña"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
+        android:paddingLeft="10dp"
         android:ems="10"
         android:background="@drawable/et_esquinas_redondeadas"
         android:inputType="textPassword"
