--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:textSize="15sp"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
         android:ems="10"
