--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         app:srcCompat="@drawable/logo_oso_app" />
 
     <TextView
-        android:id="@+id/hola_fimeno"
+        android:id="@+id/txt_hola_fimeno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="¡Hola Fimeño!"
@@ -38,7 +38,7 @@
         android:paddingLeft="10dp"
         android:background="@drawable/et_esquinas_redondeadas"
         android:inputType="textEmailAddress"
-        android:layout_below="@+id/hola_fimeno"/>
+        android:layout_below="@+id/txt_hola_fimeno"/>
 
     <EditText
         android:id="@+id/et_password"
