--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,14 +87,15 @@
         android:layout_below="@id/et_password"/>
 
     <Button
+        android:id="@+id/btn_registrar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="Registrar"
-        android:textSize="15sp"
+        android:layout_below="@id/et_confirmar_password"
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/boton_esquinas_redondeadas"
-        android:layout_below="@id/et_confirmar_password"/>
+        android:text="Registrar"
+        android:textSize="15sp" />
 
 </RelativeLayout>
