--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -15,7 +15,7 @@
         android:padding="25dp"
         android:textSize="25sp"
         android:textColor="@color/black"
-        android:text="Recuperar contraseña" />
+        android:text="Reestablecer contraseña" />
 
     <EditText
         android:id="@+id/forgot_pass"
