--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,7 +45,7 @@
         android:layout_below="@id/et_nombre"/>
 
     <EditText
-        android:id="@+id/et_correo_electronico"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:textSize="15sp"
@@ -70,7 +70,7 @@
         android:background="@drawable/et_esquinas_redondeadas"
         android:inputType="textPassword"
         android:hint="Contraseña"
-        android:layout_below="@id/et_correo_electronico"/>
+        android:layout_below="@id/et_email"/>
 
     <EditText
         android:id="@+id/et_confirmar_password"
@@ -97,5 +97,14 @@
         android:background="@drawable/boton_esquinas_redondeadas"
         android:text="Registrar"
         android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Solo se admite el correo universitario"
+        android:layout_below="@id/btn_registrar"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
